# streamingV2

./: CMakeLists.txt  readme.txt
config/: config.yaml  config_local.yaml
include/: camera_node.hpp  client_node.hpp  socket.hpp  video.hpp
src/: camera_node.cpp  client.cpp  client_node.cpp  server.cpp  socket.cpp  video.cpp
